[package]
name = "fuse"
description = "Firework kernel"
repository = "https://github.com/Firework-OS/Fuse"
publish = false
version = "0.1.0"
authors = ["VisualDevelopment"]
edition = "2021"
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
acpi = { path = "../ACPI" }
amd64 = { path = "../AMD64" }
font8x8 = { version = "0.3.1", default-features = false }
hashbrown = { version = "0.12.1", features = ["nightly"] }
kaboom = { path = "../Kaboom" }
log = { version = "0.4.17", default-features = false, features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
seq-macro = "0.3.0"
spin = { version = "0.9.3", default-features = false, features = [
    "lock_api",
    "mutex",
    "ticket_mutex",
    "use_ticket_mutex",
    "rwlock",
    "once",
    "barrier",
] }
unwinding = { version = "0.1.4", default-features = false, features = [
    "unwinder",
    "fde-static",
    "personality",
    "panic",
    "hide-trace",
] }
vesa = { path = "../VESA" }
