[package]
name = "cardboard"
description = "The BoxOS kernel"
publish = false
version = "0.1.0"
authors = ["ChefKiss Inc"]
edition = "2021"
license-file = "LICENSE"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[dependencies]
acpi = { path = "../ACPILib" }
amd64 = { path = "../AMD64Lib" }
font8x8 = { version = "0.3.1", default-features = false }
hashbrown = { version = "0.12.1", features = ["nightly"] }
sulphur_dioxide = { path = "../SulphurDioxide" }
log = { version = "0.4.17", default-features = false, features = [
    "release_max_level_debug",
    "max_level_trace",
] }
goblin = { version = "0.5.2", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
rustc-demangle = "0.1.21"
modular-bitfield = "0.11.2"
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
seq-macro = "0.3.0"
spin = { version = "0.9.3", default-features = false, features = [
    "lock_api",
    "mutex",
    "ticket_mutex",
    "use_ticket_mutex",
    "rwlock",
    "once",
    "barrier",
] }
unwinding = { version = "0.1.4", default-features = false, features = [
    "unwinder",
    "fde-static",
    "personality",
    "panic",
    "hide-trace",
] }
paper_fb = { path = "../PaperFramebuffer" }
