cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "kernel"
publish = false
version = "0.1.0"

[[bin]]
name = "kernel"
filename = "Kernel"

[profile.release]
lto = true
strip = true

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
tungstenkit = { path = "../Libraries/TungstenKit" }
hashbrown = { version = "0.14.0", features = ["nightly", "serde"] }
log = { version = "0.4.19", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.6.1", default-features = false }
paper-fb = { path = "../Libraries/PaperFrameBuffer" }
rustc-demangle = "0.1.23"
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
seq-macro = "0.3.3"
spin = { version = "0.9.8", default-features = false, features = [
    "barrier",
    "lock_api",
    "mutex",
    "once",
    "rwlock",
    "ticket_mutex",
    "use_ticket_mutex",
] }
sulphur-dioxide = { path = "../Libraries/SulphurDioxide" }
unwinding = { version = "0.1.7", default-features = false, features = [
    "fde-static",
    "hide-trace",
    "panic",
    "personality",
    "unwinder",
] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
elf = { version = "0.7.2", default-features = false, features = ["nightly"] }
itertools = { version = "0.11.0", default-features = false, features = [
    "use_alloc",
] }
