cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "kernel"
publish = false
version = "0.1.0"

[[bin]]
filename = "Kernel"
name = "kernel"

[profile.release]
strip = true

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }
hashbrown = { version = "0.14.3", features = ["nightly", "serde"] }
itertools = { version = "0.12.1", default-features = false, features = [
    "use_alloc",
] }
log = { version = "0.4.21", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.6.0"
num_enum = { version = "0.7.2", default-features = false }
paper-fb = { path = "../Libraries/PaperFrameBuffer" }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rustc-demangle = "0.1.23"
seq-macro = "0.3.5"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
spin = { version = "0.9.8", default-features = false, features = [
    "barrier",
    "lock_api",
    "mutex",
    "once",
    "rwlock",
    "ticket_mutex",
    "use_ticket_mutex",
] }
sulphur-dioxide = { path = "../Libraries/SulphurDioxide" }
fireworkkit = { path = "../Libraries/FireworkKit" }
unwinding = { version = "0.2.1", default-features = false, features = [
    "fde-static",
    "hide-trace",
    "panic",
    "personality",
    "unwinder",
] }

[patch.crates-io]
unwinding = { git = "https://github.com/nbdd0121/unwinding" }
