cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "sky"
publish = false
version = "0.1.0"

[[bin]]
filename = "Sky"
name = "sky"

[profile.release]
strip = true

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }
hashbrown = { version = "0.14.5", features = ["nightly", "serde"] }
itertools = { version = "0.13.0", default-features = false, features = [
    "use_alloc",
] }
log = { version = "0.4.22", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.8.0"
num_enum = { version = "0.7.2", default-features = false }
skybuffer = { path = "../Libraries/SkyBuffer" }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rustc-demangle = "0.1.24"
seq-macro = "0.3.5"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
spin = { version = "0.9.8", default-features = false, features = [
    "barrier",
    "lock_api",
    "mutex",
    "once",
    "rwlock",
    "ticket_mutex",
    "use_ticket_mutex",
] }
skyliftkit = { path = "../Libraries/SkyLiftKit" }
skykit = { path = "../Libraries/SkyKit" }
unwinding = { version = "0.2.2", default-features = false, features = [
    "fde-static",
    "hide-trace",
    "panic",
    "personality",
    "unwinder",
] }

[patch.crates-io]
unwinding = { git = "https://github.com/nbdd0121/unwinding" }
