cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "sky"
publish = false
version = "0.1.0"

[[bin]]
filename = "Sky"
name = "sky"

[profile.release]
strip = true

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
elf = { version = "0.8.0", default-features = false }
hashbrown = { version = "0.15.3", features = ["serde"] }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
log = { version = "0.4.27", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.11.0"
num_enum = { version = "0.7.3", default-features = false }
skybuffer = { path = "../Libraries/SkyBuffer" }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
seq-macro = "0.3.6"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
spin = { version = "0.10.0", default-features = false, features = [
    "barrier",
    "lock_api",
    "mutex",
    "once",
    "rwlock",
    "ticket_mutex",
    "use_ticket_mutex",
] }
skyliftkit = { path = "../Libraries/SkyLiftKit" }
skykit = { path = "../Libraries/SkyKit" }
