cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "skylift"
publish = false
version = "0.1.0"

[[bin]]
filename = "BOOTX64"
name = "skylift"

[profile.release]
strip = true

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }
log = { version = "0.4.21", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
skybuffer = { path = "../Libraries/SkyBuffer" }
skyliftkit = { path = "../Libraries/SkyLiftKit" }
uefi = { version = "0.27.0", default-features = false, features = [
    "alloc",
    "global_allocator",
    "logger",
    "unstable",
] }
uefi-services = "0.24.0"
