cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "xboot"
publish = false
version = "0.1.0"

[[bin]]
name = "xboot"
filename = "BOOTX64"

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
goblin = { version = "0.6.0", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
log = { version = "0.4.17", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
sulphur-dioxide = { path = "../Libraries/SulphurDioxide" }
uefi = { version = "0.19.1", default-features = false, features = [
    "alloc",
    "global_allocator",
    "unstable",
    "logger",
] }
uefi-services = "0.16.0"
