cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "xboot"
publish = false
version = "0.1.0"

[[bin]]
name = "xboot"
filename = "BOOTX64"

[dependencies]
amd64 = { path = "../Libraries/AMD64" }
elf = { version = "0.7.2", default-features = false, features = ["nightly"] }
log = { version = "0.4.17", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
sulphur-dioxide = { path = "../Libraries/SulphurDioxide" }
uefi = { version = "0.20.0", default-features = false, features = [
    "alloc",
    "global_allocator",
    "unstable",
    "logger",
] }
uefi-services = "0.17.0"
