[package]
name = "acpi"
description = "The BridgeCore ACPI implementation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
amd64 = { path = "../amd64" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
