[package]
edition = "2021"
name = "bootx"
publish = false
version = "0.1.0"

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
acpi = { path = "../acpi" }
amd64 = { path = "../amd64" }
goblin = { version = "0.6.0", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
log = { version = "0.4.17", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
sulphur-dioxide = { path = "../sulphur-dioxide" }
uefi = { version = "0.18.0", features = ["exts", "logger"] }
uefi-services = "0.14.0"
