[package]
name = "cardboard"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
acpi = { path = "../acpi" }
amd64 = { path = "../amd64" }
font8x8 = { version = "0.3.1", default-features = false }
hashbrown = { version = "0.12.3", features = ["nightly"] }
sulphur-dioxide = { path = "../sulphur-dioxide" }
log = { version = "0.4.17", default-features = false, features = [
    "release_max_level_debug",
    "max_level_trace",
] }
goblin = { version = "0.5.4", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
rustc-demangle = "0.1.21"
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
seq-macro = "0.3.1"
spin = { version = "0.9.4", default-features = false, features = [
    "lock_api",
    "mutex",
    "ticket_mutex",
    "use_ticket_mutex",
    "rwlock",
    "once",
    "barrier",
] }
unwinding = { version = "0.1.5", default-features = false, features = [
    "unwinder",
    "fde-static",
    "personality",
    "panic",
    "hide-trace",
] }
paper-fb = { path = "../paper-fb" }
uuid = { version = "1.2.1", default-features = false, features = ["v4"] }
getrandom = { version = "0.2.8", default-features = false, features = [
    "rdrand",
] }
cardboard-klib = { path = "../cardboard-klib" }
