[package]
edition = "2021"
name = "cardboard"
publish = false
version = "0.1.0"

[dependencies]
acpi = { path = "../acpi" }
amd64 = { path = "../amd64" }
cardboard-klib = { path = "../cardboard-klib" }
font8x8 = { version = "0.3.1", default-features = false }
getrandom = { version = "0.2.8", default-features = false, features = [
    "rdrand",
] }
goblin = { version = "0.6.0", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
hashbrown = { version = "0.13.1", features = ["nightly"] }
log = { version = "0.4.17", default-features = false, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
paper-fb = { path = "../paper-fb" }
rustc-demangle = "0.1.21"
seq-macro = "0.3.1"
spin = { version = "0.9.4", default-features = false, features = [
    "barrier",
    "lock_api",
    "mutex",
    "once",
    "rwlock",
    "ticket_mutex",
    "use_ticket_mutex",
] }
sulphur-dioxide = { path = "../sulphur-dioxide" }
unwinding = { version = "0.1.5", default-features = false, features = [
    "fde-static",
    "hide-trace",
    "panic",
    "personality",
    "unwinder",
] }
uuid = { version = "1.2.1", default-features = false, features = ["v4"] }
