cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "pci-core"
publish = false
version = "0.1.0"

[[bin]]
name = "pci-core"
filename = "PCICore"

[dependencies]
kernel = { path = "../../Kernel", default-features = false }
log = { version = "0.4.17", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
hashbrown = { version = "0.13.1", features = ["nightly"] }
