cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "ac97audio"
publish = false
version = "0.1.0"

[[bin]]
filename = "AC97Audio"
name = "ac97audio"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.0", features = ["nightly"] }
log = { version = "0.4.19", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.6.1", default-features = false }
pcikit = { path = "../PCIKit", features = ["ext"] }
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
serde = { version = "1.0.177", default-features = false, features = ["derive"] }
tungstenkit = { path = "../../Libraries/TungstenKit", features = ["userspace"] }
