cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "ac97audio"
publish = false
version = "0.1.0"

[[bin]]
filename = "AC97Audio"
name = "ac97audio"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.0", features = ["nightly"] }
log = { version = "0.4.20", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.5.4"
num_enum = { version = "0.7.0", default-features = false }
pcikit = { path = "../PCIKit", features = ["ext"] }
postcard = { version = "1.0.7", default-features = false, features = ["alloc"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
fireworkkit = { path = "../../Libraries/FireworkKit", features = ["userspace"] }
