cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "fktest"
publish = false
version = "0.1.0"

[[bin]]
filename = "FKTest"
name = "fktest"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.3", features = ["nightly"] }
log = { version = "0.4.20", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.6.0"
num_enum = { version = "0.7.2", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
fireworkkit = { path = "../../Libraries/FireworkKit", features = ["userspace"] }
