cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "pcikit"
publish = false
version = "0.1.0"

[[bin]]
filename = "PCIKit"
name = "pcikit"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.0", features = ["nightly"] }
itertools = { version = "0.11.0", default-features = false, features = [
    "use_alloc",
] }
log = { version = "0.4.20", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.7.0", default-features = false }
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
serde = { version = "1.0.185", default-features = false, features = ["derive"] }
fireworkkit = { path = "../../Libraries/FireworkKit", features = ["userspace"] }

[features]
default = []
ext = []
