cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "pcikit"
publish = false
version = "0.1.0"

[[bin]]
filename = "PCIKit"
name = "pcikit"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.15.2", features = ["nightly"] }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
log = { version = "0.4.22", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.10.0"
num_enum = { version = "0.7.3", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
skykit = { path = "../../Libraries/SkyKit", features = ["userspace"] }

[features]
default = []
ext = []
