cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "sktest"
publish = false
version = "0.1.0"

[[bin]]
filename = "SKTest"
name = "sktest"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.15.1", features = ["nightly"] }
log = { version = "0.4.22", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.9.2"
num_enum = { version = "0.7.3", default-features = false }
postcard = { version = "1.0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
skykit = { path = "../../Libraries/SkyKit", features = ["userspace"] }
