cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "sktest"
publish = false
version = "0.1.0"

[[bin]]
filename = "SKTest"
name = "sktest"

[profile.release]
strip = true
lto = true

[dependencies]
hashbrown = "0.15.3"
log = { version = "0.4.27", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
bitfield-struct = "0.11.0"
num_enum = { version = "0.7.3", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
skykit = { path = "../../Libraries/SkyKit", features = ["userspace"] }
