cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "tkpci"
publish = false
version = "0.1.0"

[[bin]]
name = "tkpci"
filename = "TKPCI"

[profile.release]
lto = true
strip = true

[dependencies]
tungstenkit = { path = "../../Libraries/TungstenKit", features = ["userspace"] }
log = { version = "0.4.19", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.6.1", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
hashbrown = { version = "0.14.0", features = ["nightly"] }
itertools = { version = "0.10.5", default-features = false, features = [
    "use_alloc",
] }
