cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "tktest"
publish = false
version = "0.1.0"

[[bin]]
name = "tktest"
filename = "TKTest"

[dependencies]
tungstenkit = { path = "../../Libraries/TungstenKit" }
log = { version = "0.4.17", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.6.1", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
hashbrown = { version = "0.13.2", features = ["nightly"] }
