cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "tktest"
publish = false
version = "0.1.0"

[[bin]]
filename = "TKTest"
name = "tktest"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.0", features = ["nightly"] }
log = { version = "0.4.19", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
modular-bitfield = "0.11.2"
num_enum = { version = "0.6.1", default-features = false }
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
serde = { version = "1.0.174", default-features = false, features = ["derive"] }
tungstenkit = { path = "../../Libraries/TungstenKit", features = ["userspace"] }
