cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "test-audio"
publish = false
version = "0.1.0"

[[bin]]
name = "test-audio"
filename = "TestAudio"

[dependencies]
iridium-kit = { path = "../../Libraries/IridiumKit" }
log = { version = "0.4.17", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.9", default-features = false }
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
hashbrown = { version = "0.13.2", features = ["nightly"] }
