cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "test-drv"
publish = false
version = "0.1.0"

[[bin]]
name = "test-drv"
filename = "TestDrv"

[dependencies]
tungstenkit = { path = "../../Libraries/TungstenKit" }
log = { version = "0.4.17", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.11", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
hashbrown = { version = "0.13.2", features = ["nightly"] }
