[package]
description = "The BridgeCore ACPI implementation"
edition = "2021"
name = "acpi"
publish = false
version = "0.1.0"

[dependencies]
amd64 = { path = "../AMD64" }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
