[package]
description = "The BridgeCore AMD64 implementation"
edition = "2021"
name = "amd64"
publish = false
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
