[package]
edition = "2021"
name = "fireworkkit"
publish = false
version = "0.1.0"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.14.2", features = ["nightly", "serde"] }
log = { version = "0.4.20", optional = true }
num_enum = { version = "0.7.0", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }

[features]
default = []
userspace = ["log"]
