[package]
edition = "2021"
name = "skykit"
publish = false
version = "0.1.0"

[profile.release]
strip = true

[dependencies]
hashbrown = { version = "0.15.3", features = ["serde"] }
log = { version = "0.4.27", optional = true }
num_enum = { version = "0.7.3", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[features]
default = []
userspace = ["log"]
