[package]
edition = "2021"
name = "tungstenkit"
publish = false
version = "0.1.0"

[dependencies]
num_enum = { version = "0.5.10", default-features = false }
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.13.2", features = ["nightly", "serde"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

[dev-dependencies]
ron = { version = "0.8.0" }
