[package]
edition = "2021"
name = "cardboard-klib"
publish = false
version = "0.1.0"

[dependencies]
getrandom = { version = "0.2.8", default-features = false, optional = true, features = [
    "rdrand",
] }
num_enum = { version = "0.5.7", default-features = false, features = [
    "nightly",
] }
serde = { version = "1.0.150", default-features = false, features = ["derive"] }

[features]
default = ["user"]
kernel = ["getrandom"]
user = []
