cargo-features = ["different-binary-name"]

[package]
edition = "2021"
name = "fkcachebuilder"
publish = false
version = "0.1.0"

[[bin]]
filename = "FKCacheBuilder"
name = "fkcachebuilder"

[profile.release]
strip = true

[dependencies]
postcard = { version = "1.0.6", default-features = false, features = ["alloc"] }
ron = { version = "0.8.0" }
fireworkkit = { path = "../../Libraries/FireworkKit" }
